# molcfg

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  README.md  RELEASING.md  pyproject.toml  zensical.toml
.claude/.agent/: README.md  architecture.md  notes.md  open-questions.md
.claude/specs/: INDEX.md  interpolation-grammar.acceptance.md  interpolation-grammar.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
docs/: api.md  concurrency.md  getting-started.md  index.md  merge.md  release-notes.md  sources.md  validation.md
src/molcfg/: __init__.py  concurrency.py  config.py  errors.py  merge.py  paths.py  source.py  validation.py
tests/: conftest.py  test_concurrency.py  test_config.py  test_integration.py  test_merge.py  test_paths.py  test_source.py  test_validation.py
